--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,18 @@
   <url>http://maven.apache.org</url>
 	<build>
 	  <plugins>
+
+		 <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			 <version>3.1</version>
+			 <configuration>
+			  <compilerVersion>1.8</compilerVersion>
+			  <source>1.8</source>
+			  <target>1.8</target>
+			 </configuration>
+		 </plugin>
+
          <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
               <configuration>
@@ -67,6 +79,39 @@
 	    <groupId>xml-apis</groupId>
 	    <artifactId>xml-apis</artifactId>
 	    <version>1.4.01</version>
-	</dependency>	
+	</dependency>
+
+	 <dependency>
+		 <groupId>org.eclipse.jetty.websocket</groupId>
+	  	 <artifactId>websocket-client</artifactId>
+	  	 <version>9.4.0.RC3</version>
+	 </dependency>
+
+	 <dependency>
+		 <groupId>org.eclipse.jetty.websocket</groupId>
+	  	 <artifactId>websocket-server</artifactId>
+		 <version>9.4.0.RC3</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.eclipse.jetty</groupId>
+		  <artifactId>jetty-server</artifactId>
+		  <version>9.4.0.RC3</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>com.github.jsonld-java</groupId>
+		  <artifactId>jsonld-java</artifactId>
+		  <version>0.9.0</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>com.fasterxml.jackson.core</groupId>
+		  <artifactId>jackson-databind</artifactId>
+		  <version>2.6.3</version>
+	  </dependency>
+
+
+
   </dependencies>
  </project>
