--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
           </plugin>
 	  </plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -109,6 +115,23 @@
 		  <groupId>com.fasterxml.jackson.core</groupId>
 		  <artifactId>jackson-databind</artifactId>
 		  <version>2.6.3</version>
+	  </dependency>
+	  <!--<dependency>
+		  <groupId>com.github.streamreasoning.rsp4j</groupId>
+		  <artifactId>examples</artifactId>
+		  <version>1.1.2</version>
+	  </dependency>-->
+	  <dependency>
+		  <groupId>org.streamreasoning.rsp4j</groupId>
+		  <artifactId>yasper</artifactId>
+		  <version>1.0.0</version>
+		  <scope>compile</scope>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.streamreasoning.rsp4j</groupId>
+		  <artifactId>examples</artifactId>
+		  <version>1.0.0</version>
+		  <scope>compile</scope>
 	  </dependency>
 
 
