--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
 		  <version>1.0.0</version>
 		  <scope>compile</scope>
 	  </dependency>
+	  <dependency>
+		  <groupId>com.github.keski</groupId>
+		  <artifactId>rsp-spin</artifactId>
+		  <version>2.0.4</version>
+	  </dependency>
 
 
 
